Fix flickering

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -27,7 +27,14 @@
   /* more specific animation properties here */
 }
 
+#mainPage {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
 body {
+    margin: 0;
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
